# simple-sg

./: CMakeLists.txt  LICENSE  README.md  run.bat
includes/: md4c-html.lib  md4c.lib
src/: main.cpp
src/builder/: builder.cpp  builder.hpp  feeder.cpp  feeder.hpp  page.cpp  page.hpp
src/data/: config.cpp  config.hpp  data.cpp  data.hpp
src/directives/: directive.cpp  directive.hpp  index.cpp  index.hpp  tags.cpp  tags.hpp
src/utils/: debug.hpp  logger.cpp  logger.hpp  utils.cpp  utils.hpp
